; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_md5.c_Md5_Init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_md5.c_Md5_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [4 x i8] c"md5\00", align 1
@md5_cmd = common dso_local global i64 0, align 8
@MD5DigestToBase16 = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [9 x i8] c"md5-10x8\00", align 1
@MD5DigestToBase10x8 = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [8 x i8] c"md5file\00", align 1
@md5file_cmd = common dso_local global i64 0, align 8
@.str.3 = private unnamed_addr constant [13 x i8] c"md5file-10x8\00", align 1
@TCL_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @Md5_Init(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = load i64, i64* @md5_cmd, align 8
  %5 = inttoptr i64 %4 to i32*
  %6 = load i32, i32* @MD5DigestToBase16, align 4
  %7 = call i32 @Tcl_CreateCommand(i32* %3, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32* %5, i32 %6, i32 0)
  %8 = load i32*, i32** %2, align 8
  %9 = load i64, i64* @md5_cmd, align 8
  %10 = inttoptr i64 %9 to i32*
  %11 = load i32, i32* @MD5DigestToBase10x8, align 4
  %12 = call i32 @Tcl_CreateCommand(i32* %8, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i32* %10, i32 %11, i32 0)
  %13 = load i32*, i32** %2, align 8
  %14 = load i64, i64* @md5file_cmd, align 8
  %15 = inttoptr i64 %14 to i32*
  %16 = load i32, i32* @MD5DigestToBase16, align 4
  %17 = call i32 @Tcl_CreateCommand(i32* %13, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.2, i64 0, i64 0), i32* %15, i32 %16, i32 0)
  %18 = load i32*, i32** %2, align 8
  %19 = load i64, i64* @md5file_cmd, align 8
  %20 = inttoptr i64 %19 to i32*
  %21 = load i32, i32* @MD5DigestToBase10x8, align 4
  %22 = call i32 @Tcl_CreateCommand(i32* %18, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32* %20, i32 %21, i32 0)
  %23 = load i32, i32* @TCL_OK, align 4
  ret i32 %23
}

declare dso_local i32 @Tcl_CreateCommand(i32*, i8*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
